<resources>
    <string name="app_name">Jokenpo</string>
    <string name="action_settings">Settings</string>
    <string name="opcoes">Escolha uma opção</string>
    <string name="ultimaJogada">Última jogada</string>
    <string name="jogadaPlayer">Você</string>
    <string name="resultado">Resultado</string>
    <string name="jogadaPC">Computador</string>
    <string name="banner_principal">ca-app-pub-3942156850180702/9930160675</string>
</resources>
